# alforno

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  roadmap.md
.github/workflows/: build.yml
specs/: alforno-guide.md  alforno-spec.md
src/main/c/: alf_backend.h  alforno.c  alforno_include.c  alforno_internal.h  alforno_link.c  alforno_merge.c  alforno_param.c  alforno_validate.c
src/main/h/: alforno.h
src/test/c/: alforno_test.c
src/test/resources/: base.pasta  db_base.pasta  db_prod.pasta  deep_defaults.pasta  deep_env_prod.pasta  deep_env_staging.pasta  deep_instance.pasta  deep_link_recipe.pasta  deep_platform.pasta  deep_recipe.pasta  deep_region.pasta  deep_team.pasta  deep_vars.pasta  dev.pasta  inc_base.pasta  inc_main.pasta  inc_nested_a.pasta  inc_nested_main.pasta  layer_defaults.pasta  layer_env_prod.pasta  layer_platform.pasta  layer_recipe.pasta  layer_region_eu.pasta  layer_service_api.pasta  layer_vars.pasta  platform_base.pasta  prod.pasta  recipe_app.pasta  recipe_db.pasta  recipe_deploy.pasta  recipe_tls.pasta  tls_base.pasta  tls_prod.pasta  vars_prod.pasta
